--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npx gh-pages -d dist"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
+    "gh-pages": "^4.0.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "make-dir": "^5.0.0",
     "pdfjs-dist": "^3.11.174"
   }
 }
